# PIK3CA_mutation_in_breast_cancer

./: Makefile  README.md  dataset.py  grad_check.py  model.py  predict.py  pyproject.toml  train.py
chowder/: Untitled-1.ipynb  constant.py  dataset.py  model.py  predict.py  train.py
chowder/configs/: config.yaml
chowder/utils/: engine.py  utils.py
conda/: environment.yml
configs/: config.yaml
data/: train_output.csv
data/checkpoints/: 2023-02-19_17-43-10_best_models.pth  2023-02-19_17-50-36_best_aucs.pth  2023-02-19_17-50-36_best_models.pth  2023-02-19_17-53-42_best_aucs.pth  2023-02-19_17-53-42_best_models.pth  2023-02-19_18-35-19_best_aucs_minmax.pth  2023-02-19_18-35-19_best_models.pth
data/supplementary_data/: test_metadata.csv  train_metadata.csv
tests/fixture/data/: train_output.csv
tests/fixture/data/checkpoints/: 2023-02-21_21-14-34_best_aucs_minmax.pth  2023-02-21_21-14-34_best_models_minmax.pth
tests/fixture/data/supplementary_data/: train_metadata.csv
tests/integration/: test_train.py
tests/unit/: test_dataset.py
utils/: engine.py  utils.py
